[package]
name = "kvs"
version = "0.1.0"
authors = ["Hillium <maruruku@stu.csust.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "^0.11.0"
predicates = "^1.0.0"
structopt = "0.3"
tempfile = "3.1.0"
walkdir = "2.2.7"
serde = "*"
serde_json = "*"
failure = "*"

[lib]
name = "kvs"
path = "src/lib.rs"
test = false

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false