[package]
name = "kvs"
version = "0.1.3"
authors = ["Hillium <maruruku@stu.csust.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "^0.11.0"
predicates = "^1.0.0"
structopt = "0.3"
tempfile = "3.1.0"
walkdir = "2.2.7"
serde = "*"
serde_json = "*"
failure = "*"
tokio = "0.1"
log = "0.4.8"
stderrlog = "0.4"
ctrlc = "3.1.3"
sled = "*"
env_logger = "*"
libc = "*"

[dev-dependencies]
criterion = "0.3"
rand = "*"

[lib]
name = "kvs"
path = "src/lib.rs"
test = false

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"
test = false

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"
test = false

[[bench]]
name = "kv_benchmark"
harness = false