[package]
name = "kvs"
version = "0.1.3"
authors = ["Hillium <maruruku@stu.csust.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "^0.11.0"
predicates = "^1.0.0"
structopt = "0.3"
tempfile = "3.1.0"
walkdir = "2.2.7"
serde = "*"
serde_json = "*"
failure = "*"
log = "0.4.8"
sled = "*"
log4rs = "0.8"
log-mdc = "0.1"
crossbeam-channel = "0.3"
crossbeam-utils = "*"
panic-control = "*"
rayon = "1.2"
rand = "*"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "kvs"
path = "src/lib.rs"
test = false

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"
test = false

[[bin]]
name = "kvs-server"
path = "src/bin/threaded_server.rs"
test = false

[[bench]]
name = "threaded_kv_benchmark"
harness = false